Update teaching page with course information
Added teaching details for USC and Stanford courses.

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,9 +5,18 @@ permalink: /teaching/
 author_profile: true
 ---
 
-<br>
-{% include base_path %}
+### University of Southern California (USC)
+**DSO 576 — Algorithmic Thinking with Python (MSBA)**  
+I teach DSO 576 for MSBA students at USC. The course builds algorithmic problem‑solving skills and Python implementation for business operation challenges.
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+**Learning goals**
+- Frame business and data problems in algorithmic terms  
+- Select and apply core data structures and algorithmic patterns  
+- Translate designs into Python code
+
+---
+
+### Stanford University — Teaching Assistant
+- **CS 265 — Randomized Algorithms and Probabilistic Analysis (2022)**  
+- **MS&E 337 — Network Structure and Epidemics (2020)**  
+- **CS 161 — Design and Analysis of Algorithms (2019)**  
